--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,28 @@
     overflow-y: auto;
     background-image: url(../img/whatsapp_doodles.jpg);
     background-size: cover;
+    padding: 50px 90px 0 90px;
+}
+
+#main-part .chat {
+    display: flex;
+}
+
+#main-part .message {
+    background: #d5f9ba;
+    padding: 12px 16px;
+    border-radius: 10px 10px 0 10px;
+    font-size: 17px;
+}
+
+#main-part .outgoing {
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+#main-part .incoming .message {
+    background: #f2f2f2;
+    border-radius: 10px 10px 10px 0;
 }
 
 
@@ -261,13 +283,39 @@
     align-items: center;
 }
 
-.type-bar {
+.type-area {
+    font-family: 'Poppins', sans-serif;
     width: 100%;
     height: 55px;
-    padding: 20px;
+    padding: 16px;
     font-size: 16px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
+    outline: none;
+    resize: none;
+    overflow: hidden;
+}
+
+.middle-section span {
+    align-self: center;
+    background: #ffff;
+    height: 55px;
+    line-height: 55px;
+    color: #494949;
+    margin-left: -15px;
+    padding-right: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    visibility: hidden;
+}
+
+.middle-section i {
+    font-size: 20px;
+}
+
+
+.middle-section textarea:valid ~ span {
+    visibility: visible;
 }
 
 .right-section {
