--- a/css/style.css
+++ b/css/style.css
@@ -238,18 +238,19 @@
 }
 
 #main-part .message {
-    background: #d5f9ba;
     padding: 12px 16px;
-    border-radius: 10px 10px 0 10px;
     font-size: 17px;
 }
 
-#main-part .outgoing {
+.sent {
+    background: #d5f9ba;
     justify-content: flex-end;
     margin: 20px 0;
+    border-radius: 10px 10px 0 10px;
 }
 
-#main-part .incoming .message {
+.received {
+    max-width: 20%;
     background: #f2f2f2;
     border-radius: 10px 10px 10px 0;
 }
