--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,15 @@
     padding: 15px 22px;
     background: #f4f4f4;
     border-bottom: 1px solid #e3e3e3;
+    cursor: pointer;
+}
+
+.box-chat:hover {
+    background: #d6d6d6;
 }
 
 .active {
-    background-color: #d9dddd;
+    background-color: #d8d8d8;
     border: none;
 }
 
@@ -230,27 +235,47 @@
     overflow-y: auto;
     background-image: url(../img/whatsapp_doodles.jpg);
     background-size: cover;
-    padding: 50px 90px 0 90px;
+    padding: 70px 90px 0 90px;
 }
 
 #main-part .chat {
     display: flex;
 }
 
-#main-part .message {
+#main-part .chat .message {
+    max-width: 75%;
     padding: 12px 16px;
     font-size: 17px;
-}
-
-.sent {
     background: #d5f9ba;
-    justify-content: flex-end;
-    margin: 20px 0;
     border-radius: 10px 10px 0 10px;
 }
 
-.received {
-    max-width: 20%;
+#main-part .chat .message {
+    position: relative;
+}
+
+#main-part .chat .message .checks-box {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    right: 4px;
+}
+
+#main-part .chat .message .check {
+    font-size: 14px;
+    color: #8e8e8e;
+}
+
+#main-part .chat .message .checks-box .second {
+    margin-left: -8px;
+}
+
+#main-part .sent {
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+#main-part .received .message {
     background: #f2f2f2;
     border-radius: 10px 10px 10px 0;
 }
