--- a/css/style.css
+++ b/css/style.css
@@ -244,30 +244,11 @@
 
 #main-part .chat .message {
     max-width: 75%;
-    padding: 12px 16px;
+    padding: 15px 16px;
     font-size: 17px;
     background: #d5f9ba;
     border-radius: 10px 10px 0 10px;
-}
-
-#main-part .chat .message {
     position: relative;
-}
-
-#main-part .chat .message .checks-box {
-    display: flex;
-    position: absolute;
-    bottom: 0;
-    right: 4px;
-}
-
-#main-part .chat .message .check {
-    font-size: 14px;
-    color: #8e8e8e;
-}
-
-#main-part .chat .message .checks-box .second {
-    margin-left: -8px;
 }
 
 #main-part .sent {
@@ -279,6 +260,32 @@
     background: #f2f2f2;
     border-radius: 10px 10px 10px 0;
 }
+
+#main-part .chat .message .checks-box {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    right: 4px;
+}
+
+#main-part .sent .message .check {
+    font-size: 14px;
+    color: #8e8e8e;
+}
+
+#main-part .received .message i {
+    display: none;
+}
+
+.checks-box .message-time {
+    font-size: 11px;
+}
+
+#main-part .sent .message .checks-box .second {
+    margin-left: -8px;
+}
+
+
 
 /* Stili BottomBar */
 #bottom-bar {
