--- a/css/style.css
+++ b/css/style.css
@@ -252,10 +252,6 @@
     cursor: pointer;
 }
 
-#main-part .chat .message:hover {
-    
-}
-
 .fa-chevron-down {
     cursor: pointer;
 }
@@ -270,14 +266,13 @@
 .delete-settings {
     background-color: #303030;
     color: #ffff;
-    width: 170px;
     font-size: 12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 4px;
 }
 
 .delete-settings > li {
-    padding: 10px;
+    padding: 15px 20px;
 }
 
 .delete-settings > li:hover {
@@ -322,7 +317,6 @@
 #main-part .sent .message .checks-box .second {
     margin-left: -8px;
 }
-
 
 
 /* Stili BottomBar */
